<resources>
    <string name="app_name">Foffes drickaspel v3</string>
    <string name="action_settings">Settings</string>
    <string name="playerButton">Add Player!</string>
    <string name="foffeiscool">Foffe is cool!</string>
    <string name="playerName">Name of Player</string>
    <string name="doneButton">Done!</string>
    <string name="title_activity_next">NextActivity</string>
    <string name="whoDrinksBotton">Vem Dricker?</string>
    <string name="nextDrinkButton">Nästa!</string>
    <string name="whoDrinksTextView">Vem Dricker?</string>
    <string name="title_activity_pick_agame">PickAGameActivity</string>
    <string name="startNewGame">Start!</string>
    <string name="title_activity_rhyme">RhymeActivity</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="backButton">Back!</string>
    <string name="Rhyme">Rhyme!</string>
    <string name="Start">Start!</string>
    <string name="drinkBack">Back!</string>
    <string name="NextButton">Next</string>
    <string name="infoText">info</string>
    <string name="Theme">Theme!</string>
    <string name="topText">Top Text!</string>
    <string name="bottomText">Bottom Text!</string>
    <string name="alphabet_game">Alphabet Game!</string>
    <string name="title_activity_theme">theme</string>
    <string name="title_activity_guess_word">GuessWordActivity</string>
    <string name="title_activity_alphabet_game">AlphabetGame</string>
    <string name="GuessWord">GuessWord</string>
    <string name="title_activity_story">StoryActivity</string>
    <string name="Story">Story</string>
    <string name="title_activity_react">ReactActivity</string>
    <string name="ReactBottomButtonWait">Wait</string>
    <string name="ReactTopButtonWait">Wait</string>
    <string name="ReactMiddleTextWait">3</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_word_shuffle">WordShuffle</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="Question">Question</string>
    <string name="title_activity_hangman" />
</resources>
